final tidying for public posting

--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ![](static/logo-dice.png){fig-align="center" width="3in"}
 
-We are a research team focused on illuminating the mechanisms that maintain biodiversity in nature and using our understanding to forecast how ecological systems will respond to our changing world. Our approach is broad, bringing together field & lab experiments, natural history, statistics, math, and code.
+We are a research team focused on illuminating the mechanisms that maintain biodiversity and using our understanding to predict the stability of ecological systems in a changing world. Our approach is broad, bringing together field and lab experiments with natural history, mathematical models, and statistics.
 
 We are based in the [Department of Plant & Microbial Biology](https://cals.ncsu.edu/plant-and-microbial-biology/) at North Carolina State University. During the field season, you may also find us crouched among the wildflowers at the [Rocky Mountain Biological Lab](https://www.rmbl.org/) or knee-deep in a bogs at the [University of Michigan Biological Station](https://lsa.umich.edu/umbs).
 
