--- a/people/schopler-m/about.qmd
+++ b/people/schopler-m/about.qmd
@@ -2,7 +2,7 @@
 
 **Melina Schopler**
 
-**Ph.D. candidate, Plant Biology Graduate Program**
+**Ph.D. candidate, Plant Biology Graduate Program (2021-present)**
 
 **National Science Foundation Graduate Research Fellow (NSF-GRF)**
 
