--- a/people/sears-a/about.qmd
+++ b/people/sears-a/about.qmd
@@ -2,7 +2,7 @@
 
 **Alden Sears**
 
-**Ph.D. candidate, Plant Biology Graduate Program**
+**Ph.D. candidate, Plant Biology Graduate Program** **(2022-present)**
 
 **National Science Foundation Graduate Research Fellow (NSF-GRF)**
 
