--- a/research/spatial-biodiversity.qmd
+++ b/research/spatial-biodiversity.qmd
@@ -6,7 +6,7 @@ Plant communities create rich, variable tapestries of species mixtures across la
 
 ### Species- and coexistence-area relationships in annual plant communities
 
-Plants compete for resources and are themselves resources for consumers. We previously worked at Sedgwick Reserve to understand how the spatial distribution of seed harvesting ants (*Veromessor andrei*) shape the distribution and diversity of annual plant communities through the lens of modern coexistence theory. ETHZ Masters student [Ewa Merz](../people/merz-e/about.qmd) tested how plant community structure changes with distance from ant nests and how seed diversity affects consumption rates.
+Plants compete for resources and are themselves resources for consumers. We previously worked at Sedgwick Reserve to understand how the spatial distribution of seed harvesting ants (*Veromessor andrei*) shape the distribution and diversity of annual plant communities through the lens of modern coexistence theory. ETHZ Masters student [Ewa Merz](../alumni.qmd) tested how plant community structure changes with distance from ant nests and how seed diversity affects consumption rates.
 
 ![Plant competition experiment to parameterize a coexistence model. Different plots have a different dominant species and density into which we planted focal individuals of every other species.](/static/corndog-plots2.JPG){fig-align="center" width="6in"}
 
@@ -22,6 +22,6 @@ This collaborative work is supported by a grant from the [US Army Engineer Resea
 
 ## Selected publications
 
--   Petry, W.K., Kandlikar, G.S., Kraft, N.J.B., Godoy, O. & Levine, J.M. **(2018)** A competition-defence trade-off both promotes and weakens coexistence in an annual plant community. [*Journal of Ecology*]{.underline}, 106, 1806–1818. [\[doi\]](https://doi.org/10.1111/1365-2745.13028) [\[pdf\]](publications/Petry et al. - 2018 - A competition–defence trade-off both promotes and .pdf) [\[data\]](https://doi.org/10.5281/zenodo.1256658)
+-   Petry, W.K., Kandlikar, G.S., Kraft, N.J.B., Godoy, O. & Levine, J.M. **(2018)** A competition-defence trade-off both promotes and weakens coexistence in an annual plant community. [*Journal of Ecology*]{.underline}, 106, 1806–1818. [\[doi\]](https://doi.org/10.1111/1365-2745.13028) [\[pdf\]](publications/Petry%20et%20al.%20-%202018%20-%20A%20competition–defence%20trade-off%20both%20promotes%20and%20.pdf) [\[data\]](https://doi.org/10.5281/zenodo.1256658)
 
--   Ghasemi, P., Hiscott, H., Sears, A., Montoya, B.M., Castro-Bolinaga, C., Petry, W.K., Grunden, A.M., Breland, B., Scates, A. **(2025)** Integration of Plants and Microbially Induced Soil Stabilization for Sustainable Infrastructure Design. In: [*Proceedings of the ICBBG2025*]{.underline}. Presented at the International Conference on Bio-mediated and Bio-inspired Geotechnics, Tempe, Arizona USA. [\[doi\]](https://doi.org/10.53243/ICBBG2025-40) [\[pdf\]](publications/Ghasemi et al. - 2025 - Integration of Plants and Microbially Induced Soil Stabilization for Sustainable Infrastructure Desi.pdf)
+-   Ghasemi, P., Hiscott, H., Sears, A., Montoya, B.M., Castro-Bolinaga, C., Petry, W.K., Grunden, A.M., Breland, B., Scates, A. **(2025)** Integration of Plants and Microbially Induced Soil Stabilization for Sustainable Infrastructure Design. In: [*Proceedings of the ICBBG2025*]{.underline}. Presented at the International Conference on Bio-mediated and Bio-inspired Geotechnics, Tempe, Arizona USA. [\[doi\]](https://doi.org/10.53243/ICBBG2025-40) [\[pdf\]](publications/Ghasemi%20et%20al.%20-%202025%20-%20Integration%20of%20Plants%20and%20Microbially%20Induced%20Soil%20Stabilization%20for%20Sustainable%20Infrastructure%20Desi.pdf)
