--- a/people/burroughs-n/about.qmd
+++ b/people/burroughs-n/about.qmd
@@ -2,7 +2,7 @@
 
 **Nicole Burroughs**
 
-**Ph.D. student, Plant Biology Graduate Program** **(2023-present)**
+**Ph.D. student, Microbiology Graduate Program** **(2023-present)**
 
 [\[email\]](mailto:nlesch@ncsu.edu) [\[GitHub\]](https://github.com/nlesch)
 
